--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,11 @@
             <groupId>com.formdev</groupId>
             <artifactId>flatlaf</artifactId>
             <version>1.6.4</version>
-            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.formdev</groupId>
+            <artifactId>flatlaf-intellij-themes</artifactId>
+            <version>1.6.5</version>
         </dependency>
     </dependencies>
 </project>
