--- a/pom.xml
+++ b/pom.xml
@@ -25,5 +25,15 @@
             <artifactId>flatlaf-intellij-themes</artifactId>
             <version>2.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.jfree</groupId>
+            <artifactId>jfreechart</artifactId>
+            <version>1.5.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jfree</groupId>
+            <artifactId>jcommon</artifactId>
+            <version>1.0.24</version>
+        </dependency>
     </dependencies>
 </project>
